Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8245509

Crash handler itself crashes when reporting Unsafe.putInt(0) crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4 P4
    • 15
    • 15
    • hotspot
    • b26

      Calling getUnsafe().putInt(0L, 0) from within UI app causes our crash handler itself to crash while reporting registers:

      siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000000000

      Register to memory mapping:

      RAX={method} {0x00000008000a9970} 'putInt' '(JI)V' in 'jdk/internal/misc/Unsafe'
      RBX={method} {0x00000008000a9970} 'putInt' '(JI)V' in 'jdk/internal/misc/Unsafe'
      RCX=0x0 is NULL
      RDX=0x0 is NULL
      RSP=0x000070000bcbee50 is pointing into the stack for thread: 0x00007fe4d3023820
      RBP=0x000070000bcbeee8 is pointing into the stack for thread: 0x00007fe4d3023820
      RSI=0x00000007003fe480 is an oop:
      [error occurred during error reporting (printing register info), id 0xe0000000, Internal Error (/Volumes/Work/bugs/8237727/jdk15/open/src/hotspot/share/memory/resourceArea.inline.hpp:33)]

        1. hs_err.txt
          76 kB
        2. terminal.txt
          3 kB
        3. CrashReporter.txt
          121 kB

            gziemski Gerard Ziemski (Inactive)
            gziemski Gerard Ziemski (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: