8245509: Crash handler itself crashes when reporting Unsafe.putInt(0) crash

Added ResourceMarker

Reviewed-by: coleenp, dholmes